--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # compiled output
 /dist
-/node_modules
+node_modules/
 
 # Logs
 logs
@@ -33,5 +33,16 @@ lerna-debug.log*
 !.vscode/launch.json
 !.vscode/extensions.json
 
-#environment config
+# Dependencies
+/.pnp
+.pnp.js
+
+# production
+/build
+
+# environment config
 .env*
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
